[tool.poetry]
name = "road-to-blockchain"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.18.4"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
vyper = "^0.2.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
